docs: perf readme